# ai-docs

./: .env.example  .gitignore  README.md  README_EN.md  documentary.skill  mkdocs.yml  pyproject.toml  run_docs_bg.sh
.ai-docs/: _index.json  architecture.md  changes.md  conventions.md  dependencies.md  glossary.md  index.md  overview.md  runtime.md  testing.md
.ai-docs/configs/: index.md
.ai-docs/configs/files/: pyproject__toml.md
.ai-docs/modules/: index.md
.ai-docs/modules/ai_docs/: __init__.md  __init____py.md  __main__.md  __main____py.md  cache.md  cache__py.md  changes.md  changes__py.md  cli.md  cli__py.md  domain.md  domain__py.md  generator.md  generator__py.md  generator_cache__py.md  generator_output__py.md  generator_sections__py.md  generator_shared__py.md  generator_summarize__py.md  llm.md  llm__py.md  mkdocs.md  (+8 more)
ai_docs/: __main__.py  cache.py  changes.py  cli.py  domain.py  generator.py  generator_cache.py  generator_output.py  generator_sections.py  generator_shared.py  generator_summarize.py  llm.py  mkdocs.py  scanner.py  summary.py  tokenizer.py  utils.py
ai_docs_site/: 404.html  _index.json  architecture.html  changes.html  conventions.html  dependencies.html  glossary.html  index.html  overview.html  runtime.html  testing.html
ai_docs_site/configs/: index.html
ai_docs_site/modules/: index.html
ai_docs_site/search/: search_index.json
docs/: architecture.md  changes.md  conventions.md  dependencies.md  glossary.md  index.md  runtime.md
skills/documentary/: SKILL.md
tests/: test_cache.py  test_changes.py  test_scanner.py
(+23 files in other folders)
