[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-docs-gen"
version = "0.1.0"
description = "CLI-инструмент для генерации технической документации по коду и конфигурациям"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests",
  "tiktoken",
  "pyyaml",
  "pathspec",
  "tomli",
  "python-dotenv",
  "mkdocs",
  "mkdocs-mermaid2-plugin",
  "pymdown-extensions",
]

[project.scripts]
ai-docs = "ai_docs.cli:main"

[tool.setuptools.packages.find]
include = ["ai_docs"]
